# rules_proto_grpc

./: WORKSPACE
scala/: BUILD.bazel  scala_grpc_compile.bzl  scala_grpc_library.bzl  scala_proto_compile.bzl  scala_proto_library.bzl
