load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "akka_plugin",
    out = "{name}.jar",
    tool = "@com_github_akka_akka_gprc//file",
    visibility = ["//visibility:public"],
    options = [
        "generate_client=true",
        "generate_server=true",
        "language=scala",
        "flat_package",
    ],
)
